--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dunkuloans</title>
-    <link href="./public/output.css" rel="stylesheet"> 
-</head>
-<body>
+    <!-- Correct path to Tailwind output (if you generated it via CLI) -->
+    <link href="/output.css" rel="stylesheet">
+  </head>
+  <body>
+    <!-- This div is where React injects your App -->
+    <div id="root"></div>
     
-    <h1 class="text-4xl font-extrabold text-center mt-10 text-gray-800">Welcome to Dunkuloans!</h1>
-
-    <div class="max-w-md mx-auto mt-6 p-8 bg-purple-600 text-white rounded-xl shadow-2xl transition duration-300 hover:bg-purple-700 transform hover:scale-105">
-        <h2 class="text-2xl font-semibold mb-3">Setup Confirmed!</h2>
-        <p>This box should now be purple, have rounded corners, and cast a strong shadow. Your Tailwind build is working!</p>
-    </div>
-
-</body>
+    <!-- This script loads your React Code -->
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
