feat: Improve login functionality with error handling and input validation

--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dunkuloans</title>
-    <!-- Correct path to Tailwind output (if you generated it via CLI) -->
-    <link href="/output.css" rel="stylesheet">
   </head>
   <body>
-    <!-- This div is where React injects your App -->
     <div id="root"></div>
-    
-    <!-- This script loads your React Code -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
